@@ -11,12 +11,12 @@
 
 	<name>Serenity project with JUnit and WebDriver</name>
 
-	<properties>
+<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<serenity.version>1.5.3</serenity.version>
+		<serenity.version>1.5.0-rc.1</serenity.version>
 	</properties>
 
 	<repositories>
@@ -39,8 +39,26 @@
 			<url>http://jcenter.bintray.com</url>
 		</pluginRepository>
 	</pluginRepositories>
-
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
+
+		<dependency>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>axistools-maven-plugin</artifactId>
+			<version>1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.axis2</groupId>
+			<artifactId>axis2-kernel</artifactId>
+			<version>1.6.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>build-helper-maven-plugin</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
@@ -67,6 +85,21 @@
 			<version>4.12</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.5</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.6</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.9.6</version>
+		</dependency>
+		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
 			<version>1.7.0</version>
@@ -81,6 +114,13 @@
 			<artifactId>rest-assured</artifactId>
 			<version>2.9.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.reflections/reflections -->
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
+			<version>0.9.10</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-all</artifactId>
@@ -107,18 +147,12 @@
 			<artifactId>jsch</artifactId>
 			<version>0.1.54</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
 		<dependency>
-			<groupId>javax.xml.bind</groupId>
-			<artifactId>jaxb-api</artifactId>
-			<version>2.3.0</version>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox</artifactId>
+			<version>2.0.8</version>
 		</dependency>
-		
-		<dependency>
-    <groupId>net.serenity-bdd.maven.plugins</groupId>
-    <artifactId>serenity-maven-plugin</artifactId>
-    <version>1.0.6</version>
-</dependency>
-
 
 	</dependencies>
 	<profiles>
@@ -131,7 +165,7 @@
 			</activation>
 			<properties>
 				<webdriver.gecko.path>${basedir}${file.separator}resources${file.separator}geckodriver.exe</webdriver.gecko.path>
-				<webdriver.chrome.path>${basedir}${file.separator}resources${file.separator}chromedriver229.exe</webdriver.chrome.path>
+				<webdriver.chrome.path>${basedir}${file.separator}resources${file.separator}chromedriver237.exe</webdriver.chrome.path>
 				<webdriver.ie.path>${basedir}${file.separator}resources${file.separator}IEDriverServer.exe</webdriver.ie.path>
 			</properties>
 		</profile>
@@ -144,7 +178,8 @@
 			</activation>
 			<properties>
 				<webdriver.gecko.path>resources${file.separator}geckodriverLinux</webdriver.gecko.path>
-				<webdriver.chrome.path>resources${file.separator}chromedriverlinux232</webdriver.chrome.path>
+				<webdriver.chrome.path>resources${file.separator}chromedriverlinux237</webdriver.chrome.path>
+<!-- 				 <webdriver.chrome.path>/opt/chromedriver-2.43</webdriver.chrome.path> -->
 				<webdriver.ie.path>resources${file.separator}chromedriver232</webdriver.ie.path>
 			</properties>
 		</profile>
@@ -152,14 +187,19 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.
-					
-					
-					.plugins</groupId>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.19.1</version>
 				<configuration>
+					<includes>
+						<include>**/*Test.java</include>
+					</includes>
 					<skip>true</skip>
+					<systemPropertyVariables>
+						<webdriver.driver>${webdriver.driver}</webdriver.driver>
+						<webdriver.chrome.driver>${webdriver.chrome.path}</webdriver.chrome.driver>
+						<webdriver.ie.driver>${webdriver.ie.path}</webdriver.ie.driver>
+					</systemPropertyVariables>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -167,24 +207,25 @@
 				<version>2.19.1</version>
 				<configuration>
 					<includes>
-						<include>**/*Test.java</include>
-						<include>**/Test*.java</include>
-						<include>**/When*.java</include>
-						<include>**/*Story.java</include>
+						<include>**/*${Test}.class</include>
 					</includes>
-					<argLine>-Xmx512m</argLine>
-					<argLine>--add-modules java.xml.bind</argLine>
-					<argLine>--add-modules java.se.ee</argLine>
 					<systemPropertyVariables>
 						<webdriver.driver>${webdriver.driver}</webdriver.driver>
 						<webdriver.chrome.driver>${webdriver.chrome.path}</webdriver.chrome.driver>
+						<webdriver.gecko.driver>${webdriver.gecko.path}</webdriver.gecko.driver>
 						<webdriver.ie.driver>${webdriver.ie.path}</webdriver.ie.driver>
 					</systemPropertyVariables>
 				</configuration>
 				<executions>
 					<execution>
+						<id>integration-test</id>
 						<goals>
 							<goal>integration-test</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>verify</id>
+						<goals>
 							<goal>verify</goal>
 						</goals>
 					</execution>
@@ -193,7 +234,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.5.2</version>
+				<version>3.2</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
@@ -206,6 +247,7 @@
 				<executions>
 					<execution>
 						<id>serenity-reports</id>
+
 						<phase>post-integration-test</phase>
 						<goals>
 							<goal>aggregate</goal>
@@ -213,16 +255,52 @@
 					</execution>
 				</executions>
 			</plugin>
-
 			<plugin>
-				<groupId>com.zenjava</groupId>
-				<artifactId>javafx-maven-plugin</artifactId>
-				<version>8.8.3</version>
-				<configuration>
-					<mainClass>your.main.class.which.extends.javafx.Application</mainClass>
-				</configuration>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>axistools-maven-plugin</artifactId>
+				<version>1.4</version>
+				<executions>
+					<execution>
+						<id>ax-ws-autogen</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>wsdl2java</goal>
+						</goals>
+						<configuration>
+							<sourceDirectory>/home/mihaibarta/Desktop</sourceDirectory>
+							<wsdlFiles>
+								<wsdlFile>legal1.wsdl</wsdlFile>
+							</wsdlFiles>
+							<packageSpace>legalOpinion</packageSpace>
+							<testCases>false</testCases>
+							<serverSide>false</serverSide>
+							<subPackageByFileName>false</subPackageByFileName>
+							<outputDirectory>src/main/generated</outputDirectory>
+							<verbose>true</verbose>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>3.0.0</version>
+				<executions>
+					<execution>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>add-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<source>src/main/generated</source>
+							</sources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
+
 </project>
